FE: Fixes scrollbar border

--- a/public/juan/custom.css
+++ b/public/juan/custom.css
@@ -475,10 +475,10 @@ fieldset#checkout {
 }
 
 .stickyhero-tab:hover {
-  color: white;
-  background: rgba(102, 177, 241, 0.8);
   -webkit-transition: all 0.5s ease;
   transition: all 0.5s ease;
+  text-decoration: none;
+  border-bottom: 1px solid #007bfe;
 }
 
 .stickyhero-tab-slider {
